tetris-app/deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tetris
  name: tetris
  namespace: abastidasc-devops
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: tetris
  template:
    metadata:
      labels:
        app: tetris
    spec:
      containers:
        - name: tetris
          image: adijaiswal/tetris:v1
          imagePullPolicy: IfNotPresent
          command: ["/docker-entrypoint.sh"]
          args: ["nginx", "-g", "daemon off;"]
          ports:
            - containerPort: 80
