tetris-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tetris
spec:
  selector:
    app: tetris
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
